fix(orders): #65 fixed error message

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -15,7 +15,7 @@
         "general": "General error",
         "shipments": "Some shipments are missing the shipping method",
         "paymentMethod": "Step payment can't be blank",
-        "transition": "Transition is not permitted",
+        "transition": "Transition is not permitted, some products have gone out of stock",
         "payer": "Payer has not approved payment",
         "resourceID": "The requested resource ID was not found"
     },
