feat(checkout): back button on checkout

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -8,7 +8,8 @@
         "free" : "Free",
         "apply": "Apply",
         "privacy_and_terms": "By clicking the checkbox you agree to <bold><termsUrl>terms</termsUrl></bold> and <bold><privacyUrl>privacy</privacyUrl></bold>.",
-        "checkoutTitle": "Checkout"
+        "checkoutTitle": "Checkout",
+        "back": "Back to shop"
     },
 
     "error": {
