--- a/public/static/locales/it/common.json
+++ b/public/static/locales/it/common.json
@@ -8,7 +8,8 @@
         "free" : "Gratis",
         "apply": "Applica",
         "privacy_and_terms": "Spuntando la casella accetti i <bold><termsUrl>termini</termsUrl></bold> e la <bold><privacyUrl>privacy</privacyUrl></bold>.",
-        "checkoutTitle": "Checkout"
+        "checkoutTitle": "Checkout",
+        "back": "Ritorna allo shop"
     },
 
     "error": {
